Bug 400243 - Should not have to select text globally in the text editor window to edit it
Summary: Should not have to select text globally in the text editor window to edit it
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 4.1.5
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-24 14:06 UTC by Camille Bissuel
Modified: 2019-05-14 06:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Camille Bissuel 2018-10-24 14:06:24 UTC
Testing the new 4.0 text tool, another usability issue bother me : If I edit a text (clicking on it, then pressing Enter and seeing the text editor window), changes like selecting another font doesn't apply to the text if I don't select it first. 
So we have to select it on the main canvas to edit it once, then select it globally again (Ctrl+A)  in the editor window to edit it. It's very slow and it's not obvious, and my first impression was "it doesn't work". 

I suggest change to text apply globally to all text in the editor window if no text is selected inside it (it's interesting to apply some change to part of it, but it shouldn't affect basic usage).

Tested with Krita 4.1.5 under Ubuntu 18.04 with PPA
Comment 1 Halla Rempt 2018-10-30 13:59:39 UTC
Yes, that would be a good improvement.
Comment 2 Scott Petrovic 2018-11-15 19:52:38 UTC
I was thinking about this usability issue a bit and had an idea to improve it even further.

Here is a design mockup
https://phabricator.kde.org/M143

The idea is that you can make global changes right from the tool options instead of having to open the editor. They also "just happen" on the canvas, so there is no saving needed like is needed in the text editor. 

At least for me, most of the time I only want global changes, so this makes that workflow much easier and I can see the results immediately.

If you want more control over changing small parts, you can open up the text editor by pressing the button.

Not sure if this would be acceptable for what you are trying to do.
Comment 3 Camille Bissuel 2018-11-19 13:59:04 UTC
Hi Scott,

yes it would be a good improvement, and would work for my needs, but I'm asking myself if having a "text-over" window in the Gimp style would not be better if you plan to separate basic and advanced text tools ;)

Thanks for your proposal anyway, it's nice to ear I'm not the only one interested !
Comment 4 Scott Petrovic 2018-11-19 18:10:20 UTC
This probably needs some more thinking. After Tyson's last comment and how he wants it to work, he is wanting it to work in a way that might not be intuitive for a lot of people. With his idea, making changes will change everything "except" text that has otherwise been changed -- which means he does a lot of individual changes. A lot of people, like myself, just want broad changes and are ok changing everything at once. Those are going to be two workflows we need to think about going forward with any UX direction.

The way GIMP does it is kind of neat, but it has some usability and functional issues which I don't think we want to follow. For example as soon as you transform the text (like rotating) and try to edit the text, it deletes the rotation you just did. GIMP also has separate tools for everything. A tool for move, a tool for rotate, a tool for scale, and another tool that tries to combine all those as a "unified tool". Krita can do all that with the default tool, which is a better design as far as I see it (less changing tools). 

Selecting an object in Krita doesn't mean you necessarily want to change the text, so I kind of don't like a WYSIWYG editor on the canvas. That also starts getting really odd looking when you start rotating a text object.
Comment 5 Camille Bissuel 2018-11-20 13:51:24 UTC
You convinced me  : I agree the UI should not rotate with the text, so it's probably better to have it in the tool options panel.

Maybe the advanced text option should be in the same panel, in another tab than basic text options in a similar way than the transform tool.

So you would have tree tabs in the the tool options panel if you select the text tool : basic text, advanced text (with menu entries like search and replace but with buttons) and SVG markup edit.

Maybe Tyson workflow is specific to his language, but I think it's compatible with your and my workflow of board changes.
So you change text globally if you have no selection, locally if you have a selection, and local edit is not removed by global edit (keep it's markup). You just need to add a button like "reset local edits" to be able to go back to global edits and remove local edits (only one global markup). 
It would be similar to the way Scribus handle paragraph styles and text styles, and I believe it's useful in a comic workflow when you want some effect on one word sometimes.
Comment 6 vanyossi 2019-05-13 19:07:45 UTC
So the main idea for this is:

- After opening the text editor, the default mode is to modify all text, no selection needed.
- Add extra Text tool options and make them do something (live)
Comment 7 vanyossi 2019-05-14 06:19:03 UTC
Git commit f478f2bba5e1a6203a231bfb941a8ffdd853b65a by Ivan Yossi.
Committed on 14/05/2019 at 06:18.
Pushed by ivany into branch 'master'.

Fix: Should not have to select text globally in text editor

M  +36   -2    plugins/tools/svgtexttool/SvgTextEditor.cpp
M  +5    -0    plugins/tools/svgtexttool/SvgTextEditor.h

https://invent.kde.org/kde/krita/commit/f478f2bba5e1a6203a231bfb941a8ffdd853b65a