Fix: Should not have to select text globally in text editor

BUG:400243